--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -18,7 +18,7 @@ jobs:
           python-version: 3.9.1
       - name: Set timezone
         run: |
-          cp /usr/share/zoneinfo/Asia/Shanghai /etc/localtime
+          cp /weixin_send_main/weixin_tuisong-main/源码版/tuisong
       - name: install pip packages
         run: |
           python -m pip install --upgrade pip
